Tue Jul 23 07:44:59 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems from master as of commit b165260
	* test/rubygems:  ditto.

Tue Jul 23 07:14:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mulsub_1xN): New function.
	  (bary_mul_toom3): Use bary_mulsub_1xN.

Tue Jul 23 03:32:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (KARATSUBA_BALANCED): New macro.
	  (TOOM3_BALANCED): Ditto.
	  (bary_mul_balance_with_mulfunc): Use KARATSUBA_BALANCED and
	  TOOM3_BALANCED.
	  (rb_big_mul_balance): Relax a condition.
	  (rb_big_mul_karatsuba): Use KARATSUBA_BALANCED.
	  (rb_big_mul_toom3): Use TOOM3_BALANCED.
	  (bary_mul_karatsuba_branch): Use KARATSUBA_BALANCED.
	  (bary_mul_toom3_branch): Use TOOM3_BALANCED.

Tue Jul 23 01:34:45 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_mulsub): Extracted from bigdivrem1.
	  (bigdivrem1): Use bary_add.

Mon Jul 22 18:39:52 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_enumerate_chars): specify array capa
	  with str_strlen().

	* string.c (rb_str_enumerate_codepoints): ditto.

Mon Jul 22 18:01:33 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_enumerate_chars): specify array capa.

Mon Jul 22 17:24:14 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_each_char_size): performance improvement by
	  using rb_str_length().

Mon Jul 22 16:32:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): check by Check_TypedStruct
	  instead of rb_obj_is_kind_of.

Mon Jul 22 13:19:22 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_resize_capa): use RARRAY_RAWPTR() because
	  this code creates no new references.

Mon Jul 22 12:58:18 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_memfill): added.

	* array.c (rb_ary_initialize): use ary_memfill().

	* array.c (rb_ary_fill): ditto.

	* array.c (rb_ary_slice_bang): use RARRAY_RAWPTR() because
	  this code creates no new references.
